--- a/test/templates/login.html
+++ b/test/templates/login.html
@@ -8,20 +8,15 @@
 </head>
 
 <body>
-  <form>
+  <form method="post">
     {% csrf_token %}
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-        placeholder="Enter email">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <label for="username">Username:</label>
+    <input type="text" name="username" id="username" required><br>
+    <label for="password">Password:</label>
+    <input type="password" name="password" id="password" required><br>
+    <input type="submit" value="Login">
   </form>
+
 </body>
 
 </html>
